Dibuat menggunakan Colab

--- a/notebook/Disease-Prediction-from-Symptoms-checkpoint2.ipynb
+++ b/notebook/Disease-Prediction-from-Symptoms-checkpoint2.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "id": "T_GLw-e60xls"
       },
@@ -34,14 +34,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 5,
       "metadata": {
         "id": "Dc-zs1Ut0xlu"
       },
       "outputs": [],
       "source": [
         "# Read Raw Dataset\n",
-        "df = pd.read_excel('/raw_data.xlsx')    # membaca file csv/Excel\n",
+        "df = pd.read_excel('/content/raw_data.xlsx')    # membaca file csv/Excel\n",
         "\n",
         "# Terjadi eror karna file raw_data.xlsx tidak terdapat pada drive lokal.\n",
         "# Saya melakukan download file raw_data.xlsx terlebih dahulu yang ada di github\n",
@@ -56,12 +56,12 @@
       ],
       "metadata": {
         "id": "9UjHnuh78cbr",
-        "outputId": "2ba70d00-43c5-45ac-e274-28704bbb2723",
+        "outputId": "b206b537-8f6e-411b-d07c-597664665195",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,10 +74,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 7,
       "metadata": {
         "id": "i21meTSJ0xlv",
-        "outputId": "d891fc43-ab10-4a74-fca0-6c87cbcfd1e8",
+        "outputId": "3091357e-a3f2-45cf-8ff1-9a85857e6fe6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -104,7 +104,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-182bf883-eeae-44e1-a8a5-140e0080d8bc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bf076bd3-f0ec-4af2-88f1-cbebb4bac72a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -165,7 +165,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-182bf883-eeae-44e1-a8a5-140e0080d8bc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf076bd3-f0ec-4af2-88f1-cbebb4bac72a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -217,12 +217,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-182bf883-eeae-44e1-a8a5-140e0080d8bc button.colab-df-convert');\n",
+              "        document.querySelector('#df-bf076bd3-f0ec-4af2-88f1-cbebb4bac72a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-182bf883-eeae-44e1-a8a5-140e0080d8bc');\n",
+              "        const element = document.querySelector('#df-bf076bd3-f0ec-4af2-88f1-cbebb4bac72a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -242,8 +242,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-975a1b44-9035-44af-8dcb-aa54df151137\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-975a1b44-9035-44af-8dcb-aa54df151137')\"\n",
+              "<div id=\"df-a0b0f0bf-eaaf-4d91-89ff-c0792edced6c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a0b0f0bf-eaaf-4d91-89ff-c0792edced6c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -362,7 +362,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-975a1b44-9035-44af-8dcb-aa54df151137 button');\n",
+              "        document.querySelector('#df-a0b0f0bf-eaaf-4d91-89ff-c0792edced6c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -378,7 +378,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 7
         }
       ],
       "source": [
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 8,
       "metadata": {
         "id": "pqru5bRr0xlv"
       },
@@ -399,10 +399,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 9,
       "metadata": {
         "id": "-KELl7Q90xlw",
-        "outputId": "e3b776fd-c040-4707-cbf3-f3add1ff11ad",
+        "outputId": "0819b5d3-c05b-4e21-912d-139f80eccecb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -429,7 +429,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8a4d55a5-9ff6-481c-89be-7cf5aaa6b799\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-29045123-b2c0-443a-9a60-a7718239e626\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -490,7 +490,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8a4d55a5-9ff6-481c-89be-7cf5aaa6b799')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-29045123-b2c0-443a-9a60-a7718239e626')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -542,12 +542,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8a4d55a5-9ff6-481c-89be-7cf5aaa6b799 button.colab-df-convert');\n",
+              "        document.querySelector('#df-29045123-b2c0-443a-9a60-a7718239e626 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8a4d55a5-9ff6-481c-89be-7cf5aaa6b799');\n",
+              "        const element = document.querySelector('#df-29045123-b2c0-443a-9a60-a7718239e626');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -567,8 +567,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7b29f39f-6df5-455b-a6a5-3e14ab1ce4cf\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7b29f39f-6df5-455b-a6a5-3e14ab1ce4cf')\"\n",
+              "<div id=\"df-0f350195-0690-4da2-9096-e659c0c7f0da\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0f350195-0690-4da2-9096-e659c0c7f0da')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -687,7 +687,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7b29f39f-6df5-455b-a6a5-3e14ab1ce4cf button');\n",
+              "        document.querySelector('#df-0f350195-0690-4da2-9096-e659c0c7f0da button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -703,7 +703,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 9
         }
       ],
       "source": [
@@ -712,7 +712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 10,
       "metadata": {
         "id": "ETaopeF00xlw"
       },
@@ -732,28 +732,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 11,
       "metadata": {
         "id": "b9wkkfeh0xlx"
       },
       "outputs": [],
       "source": [
         "# Data Cleanup\n",
-        "disease_list = []\n",
-        "disease_symptom_dict = defaultdict(list)\n",
-        "disease_symptom_count = {}\n",
+        "disease_list = []                                      # Menampung data penyakit\n",
+        "disease_symptom_dict = defaultdict(list)               #\n",
+        "disease_symptom_count = {}                             # Menampung gejala\n",
         "count = 0\n",
         "\n",
-        "for idx, row in data.iterrows():\n",
+        "for idx, row in data.iterrows():                       # Melakukan loop data\n",
         "\n",
         "    # Get the Disease Names\n",
-        "    if (row['Disease'] !=\"\\xc2\\xa0\") and (row['Disease'] != \"\"):\n",
-        "        disease = row['Disease']\n",
+        "    if (row['Disease'] !=\"\\xc2\\xa0\") and (row['Disease'] != \"\"):   # Jika row['Disease'] !=\"\\xc2\\xa0\" dan nilai kolom disease tidak kosong\n",
+        "        disease = row['Disease']                                   #\n",
         "        disease_list = process_data(data=disease)\n",
         "        count = row['Count of Disease Occurrence']\n",
         "\n",
         "    # Get the Symptoms Corresponding to Diseases\n",
-        "    if (row['Symptom'] !=\"\\xc2\\xa0\") and (row['Symptom'] != \"\"):\n",
+        "    if (row['Symptom'] !=\"\\xc2\\xa0\") and (row['Symptom'] != \"\"):   # Jika row['symptom'] !=\"\\xc2\\xa0\" dan nilai kolom symptom tidak kosong\n",
         "        symptom = row['Symptom']\n",
         "        symptom_list = process_data(data=symptom)\n",
         "        for d in disease_list:\n",
@@ -764,11 +764,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 12,
       "metadata": {
         "scrolled": true,
         "id": "nlZfxXXf0xlx",
-        "outputId": "c18354d6-e259-4d48-ea65-d37fc09c943c",
+        "outputId": "0c020dd8-86e3-4003-fef9-6fef40d15621",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2910,21 +2910,21 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 12
         }
       ],
       "source": [
         "# See that the data is Processed Correctly\n",
-        "disease_symptom_dict"
+        "disease_symptom_dict                                  # Untuk memeriksa data apakah diproses dengan benar"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 13,
       "metadata": {
         "scrolled": true,
         "id": "U8LNOQZA0xly",
-        "outputId": "1970c67f-b3ab-4a66-f359-820258914766",
+        "outputId": "35342571-4eea-47fc-a2a2-61a3a682f905",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3086,41 +3086,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 13
         }
       ],
       "source": [
         "# Count of Disease Occurence w.r.t each Disease\n",
-        "disease_symptom_count"
+        "disease_symptom_count                           # Menghitung kemunculan penyakit"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 15,
       "metadata": {
-        "id": "K8ySx-cQ0xlz",
-        "outputId": "36b3a7b1-817b-423a-c3b1-9737a2a724fa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        }
+        "id": "K8ySx-cQ0xlz"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: './dataset/cleaned_data.csv'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-24-d72ab7125d17>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Save cleaned data as CSV\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./dataset/cleaned_data.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mwriter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './dataset/cleaned_data.csv'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Save cleaned data as CSV\n",
-        "f = open('./dataset/cleaned_data.csv', 'w')\n",
+        "f = open('/content/cleaned_data.csv', 'w')         # Membuat file baru untuk menyimpan data cleaned_data.csv\n",
         "\n",
         "with f:\n",
         "    writer = csv.writer(f)\n",
